# hostname

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/uu/dnsdomainname/: Cargo.toml  dnsdomainname.md
src/uu/dnsdomainname/src/: dnsdomainname.rs  main.rs  net.rs  print.rs
src/uu/dnsdomainname/src/net/: unix.rs  windows.rs
src/uu/dnsdomainname/src/print/: unix.rs  windows.rs
src/uu/domainname/: Cargo.toml  domainname.md
src/uu/domainname/src/: change.rs  domainname.rs  errors.rs  main.rs  net.rs  print.rs  utils.rs
src/uu/domainname/src/change/: unix.rs  windows.rs
src/uu/domainname/src/net/: unix.rs  windows.rs
src/uu/domainname/src/print/: unix.rs  windows.rs
src/uu/hostname/: Cargo.toml  hostname.md
src/uu/hostname/src/: change.rs  errors.rs  hostname.rs  net.rs  print.rs  utils.rs
src/uu/hostname/src/change/: unix.rs  windows.rs
src/uu/hostname/src/net/: unix.rs  windows.rs
src/uu/hostname/src/print/: unix.rs  windows.rs
tests/: test_wrapper_binaries.rs  tests.rs
tests/by-util/: test_dnsdomainname.rs  test_domainname.rs  test_hostname.rs
tests/by_util/: domainname.rs  hostname.rs  mod.rs
