# hostname (uutils)
# * see the repository LICENSE, README, and CONTRIBUTING files for more information

# spell-checker:ignore (libs) mangen procfs

[package]
name = "hostname"
version = "0.0.1"
authors = ["uutils developers"]
license = "MIT"
description = "hostname ~ implemented as universal (cross-platform) utils, written in Rust"
default-run = "hostname"

homepage = "https://github.com/uutils/hostname"
repository = "https://github.com/uutils/hostname"
readme = "README.md"
keywords = ["hostname", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2024"

build = "build.rs"

[features]
default = ["feat_common_core"]
uudoc = []

feat_common_core = [
  "hostname",
]

[workspace.dependencies]
clap = { version = "4.5.4", features = ["wrap_help", "cargo"] }
clap_complete = "4.5.2"
clap_mangen = "0.3.0"
ctor = "1.0.0"
errno = "0.3"
libc = "0.2.154"
phf = "0.13.0"
phf_codegen = "0.13.1"
rand = { version = "0.10.0" }
regex = "1.10.4"
tempfile = "3.10.1"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
utmpx = "0.2"
uucore = "0.9.0"
uutests = "0.9.0"
windows-sys = { version = "0.61", features = [
  "Win32_Globalization",
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_System_SystemInformation",
  "Win32_Foundation",
] }
xattr = "1.3.1"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
phf = { workspace = true }
textwrap = { workspace = true }
uucore = { workspace = true }


#
hostname = { optional = true, version = "0.0.1", package = "uu_hostname", path = "src/uu/hostname" }

[dev-dependencies]
ctor = { workspace = true }
libc = { workspace = true }
pretty_assertions = "1.4.0"
rand = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
uucore = { workspace = true, features = ["entries", "process", "signals"] }
uutests = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
xattr = { workspace = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dev-dependencies]
procfs = { version = "0.18", default-features = false }
rlimit = "0.11.0"

[build-dependencies]
phf_codegen = { workspace = true }


[[bin]]
name = "hostname"
path = "src/bin/hostname.rs"

[[bin]]
name = "uudoc"
path = "src/bin/uudoc.rs"
required-features = ["uudoc"]

# The default release profile. It contains all optimizations, without
# sacrificing debug info. With this profile (like in the standard
# release profile), the debug info and the stack traces will still be available.
[profile.release]
lto = true

# A release-like profile that is tuned to be fast, even when being fast
# compromises on binary size. This includes aborting on panic.
[profile.release-fast]
inherits = "release"
panic = "abort"

# A release-like profile that is as small as possible.
[profile.release-small]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
