# dnsdomainname (uutils)
# * see the repository LICENSE, README, and CONTRIBUTING files for more information

[package]
name = "uu_dnsdomainname"
version = "0.0.1"
authors = ["uutils developers"]
license = "MIT"
description = "dnsdomainname ~ implemented as universal (cross-platform) utils, written in Rust"

homepage = "https://github.com/uutils/hostname"
repository = "https://github.com/uutils/hostname"
keywords = [
    "dnsdomainname",
    "hostname",
    "uutils",
    "cross-platform",
    "cli",
    "utility",
]
categories = ["command-line-utilities"]
edition = "2024"

[lib]
path = "src/dnsdomainname.rs"

[dependencies]
clap = { workspace = true }
uucore = { workspace = true }
libc = { workspace = true }
errno = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
