[package]
name = "uu_domainname"
version = "0.0.1"
edition = "2024"
authors     = ["uutils developers"]
license     = "MIT"
description = "domainname ~ (uutils) show or set the system's NIS/YP domain name"

homepage   = "https://github.com/uutils/hostname"
repository = "https://github.com/uutils/hostname/tree/main/src/uu/hostname"
keywords   = ["acl", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
uucore = { workspace = true }
clap   = { workspace = true }

# [target.'cfg(target_os = "windows")'.dependencies]
# windows-sys = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
errno = { workspace = true }
libc  = { workspace = true }

[lib]
path = "src/domainname.rs"

[[bin]]
name = "domainname"
path = "src/main.rs"